Refactored locks