@@ -4,7 +4,7 @@ package io.jitstatic.storage;
  * #%L
  * jitstatic
  * %%
- * Copyright (C) 2017 H.Hegardt
+ * Copyright (C) 2017 - 2018 H.Hegardt
  * %%
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,22 +20,13 @@ package io.jitstatic.storage;
  * #L%
  */
 
-import java.io.IOException;
-import java.io.InputStream;
 import java.io.UncheckedIOException;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -45,18 +36,21 @@ import org.eclipse.jgit.lib.Constants;
 import com.spencerwi.either.Either;
 
 import io.jitstatic.StorageData;
+import io.jitstatic.hosted.FailedToLock;
 import io.jitstatic.hosted.KeyAlreadyExist;
+import io.jitstatic.hosted.LoadException;
+import io.jitstatic.hosted.RefHolder;
+import io.jitstatic.hosted.StoreInfo;
 import io.jitstatic.source.Source;
 import io.jitstatic.source.SourceInfo;
-import io.jitstatic.utils.LinkedException;
 import io.jitstatic.utils.Pair;
+import io.jitstatic.utils.Path;
 import io.jitstatic.utils.ShouldNeverHappenException;
 import io.jitstatic.utils.WrappingAPIException;
 
 public class GitStorage implements Storage {
 
     private static final Logger LOG = LogManager.getLogger(GitStorage.class);
-    private static final SourceHandler HANDLER = new SourceHandler();
     private final Map<String, RefHolder> cache = new ConcurrentHashMap<>();
     private final AtomicReference<Exception> fault = new AtomicReference<>();
     private final Source source;
@@ -66,26 +60,20 @@ public class GitStorage implements Storage {
         this.source = Objects.requireNonNull(source, "Source cannot be null");
         this.defaultRef = defaultRef == null ? Constants.R_HEADS + Constants.MASTER : defaultRef;
     }
+    
+    public RefHolder getRefHolderLock(final String ref) {
+        return getRefHolder(ref);
+    }
 
     public void reload(final List<String> refsToReload) {
         Objects.requireNonNull(refsToReload);
-        refsToReload.parallelStream().forEach(ref -> {
+        refsToReload.stream().forEach(ref -> {
             final RefHolder refHolder = cache.get(ref);
             if (refHolder != null) {
                 try {
-                    refHolder.lockWriteAll(() -> {
-                        LOG.info("Reloading " + ref);
-                        final Set<String> files = (refHolder != null ? new HashSet<>(refHolder.refCache.keySet()) : Set.<String>of());
-
-                        final Map<String, Optional<StoreInfo>> newMap = refreshFiles(ref, files);
-                        if (newMap.size() > 0) {
-                            final RefHolder originalRefHolder = cache.get(ref);
-                            final Set<String> oldKeys = originalRefHolder.refCache.entrySet().stream().filter(e -> e.getValue().isPresent())
-                                    .filter(e -> !newMap.containsKey(e.getKey())).map(Entry::getKey).collect(Collectors.toSet());
-                            final Map<String, Optional<StoreInfo>> refreshedOldFiles = refreshFiles(ref, oldKeys);
-                            newMap.putAll(refreshedOldFiles);
-                            cache.put(ref, new RefHolder(ref, newMap));
-                        } else {
+                    refHolder.reloadAll(() -> {
+                        boolean isRefreshed = refHolder.refresh();
+                        if (!isRefreshed) {
                             cache.remove(ref);
                         }
                     });
@@ -95,31 +83,6 @@ public class GitStorage implements Storage {
                 }
             }
         });
-    }
-
-    private Map<String, Optional<StoreInfo>> refreshFiles(final String ref, final Set<String> files) {
-        final List<Either<Optional<Pair<String, StoreInfo>>, Exception>> refreshRef = refreshRef(ref, files);
-        final List<Exception> faults = refreshRef.stream().filter(Either::isRight).map(Either::getRight).collect(Collectors.toList());
-        if (!faults.isEmpty()) {
-            throw new LinkedException(faults);
-        }
-        final Map<String, Optional<StoreInfo>> newMap = refreshRef.stream().filter(Either::isLeft).map(Either::getLeft)
-                .flatMap(Optional::stream).filter(p -> p.getRight() != null)
-                .collect(Collectors.toConcurrentMap(Pair::getLeft, p -> Optional.of(p.getRight())));
-        return newMap;
-    }
-
-    private List<Either<Optional<Pair<String, StoreInfo>>, Exception>> refreshRef(final String ref, final Set<String> files) {
-        return files.stream().map(key -> {
-            try {
-                return Either.<Optional<Pair<String, StoreInfo>>, Exception>left(Optional.of(Pair.of(key, load(key, ref))));
-            } catch (final RefNotFoundException ignore) {
-            } catch (final Exception e) {
-                return Either.<Optional<Pair<String, StoreInfo>>, Exception>right(
-                        new RuntimeException(key + " in " + ref + " had the following error", e));
-            }
-            return Either.<Optional<Pair<String, StoreInfo>>, Exception>left(Optional.<Pair<String, StoreInfo>>empty());
-        }).collect(Collectors.toCollection(() -> new ArrayList<>(files.size())));
     }
 
     private void consumeError(final Exception e) {
@@ -135,97 +98,36 @@ public class GitStorage implements Storage {
     }
 
     @Override
-    public Supplier<Optional<StoreInfo>> getKey(final String key, String ref) {
-        final String finalRef = checkRef(ref);
-        RefHolder refHolder = cache.get(finalRef);
-
-        if (refHolder == null) {
-            refHolder = getMap(finalRef);
+    public Optional<StoreInfo> getKey(final String key, String ref) {
+        if (checkKeyIsDotFile(key)) {
+            return Optional.empty();
         }
+        final String finalRef = checkRef(ref);
+        final RefHolder refHolder = getRefHolder(finalRef);
         final Optional<StoreInfo> storeInfo = refHolder.getKey(key);
         if (storeInfo == null) {
-            return loadAndStore(key, finalRef, refHolder);
-        }
-        return () -> storeInfo;
-    }
-
-    private RefHolder getMap(final String finalRef) {
-        RefHolder map = cache.get(finalRef);
-        if (map == null) {
-            synchronized (cache) {
-                map = new RefHolder(finalRef, new ConcurrentHashMap<>());
-                cache.put(finalRef, map);
-            }
-        }
-        return map;
-    }
-
-    private Supplier<Optional<StoreInfo>> loadAndStore(final String key, final String finalRef, final RefHolder refMap) {
-        return () -> {
-            if (checkKeyIsDotFile(key)) {
+            try {
+                return refHolder.loadAndStore(key);
+            } catch (final LoadException e) {
+                removeCacheRef(finalRef, refHolder);
                 return Optional.empty();
+            } catch (final Exception e) {
+                consumeError(e);
             }
-            Optional<StoreInfo> storeInfoContainer = refMap.getKey(key);
-            if (storeInfoContainer == null) {
-                try {
-                    final StoreInfo storeInfo = refMap.read(() -> {
-                        try {
-                            return load(key, finalRef);
-                        } catch (final RefNotFoundException e) {
-                            throw new LoadException(e);
-                        } catch (IOException e) {
-                            throw new UncheckedIOException(e);
-                        }
-                    });
-                    storeInfoContainer = store(key, refMap.refCache, storeInfo);
-                } catch (final LoadException e) {
-                    removeCacheRef(finalRef, refMap);
-                    return Optional.empty();
-                } catch (final Exception e) {
-                    consumeError(e);
-                }
-            }
-            return storeInfoContainer;
-        };
-    }
-
-    private Optional<StoreInfo> store(final String key, final Map<String, Optional<StoreInfo>> refMap, final StoreInfo storeInfo) {
-        Optional<StoreInfo> storeInfoContainer;
-        if (storeInfo != null) {
-            if (keyRequestedIsMasterMeta(key, storeInfo) || keyRequestedIsNormalKey(key, storeInfo)) {
-                storeInfoContainer = Optional.of(storeInfo);
-                refMap.put(key, storeInfoContainer);
-            } else {
-                /* StoreInfo could contain .metadata information but no key info */
-                storeInfoContainer = Optional.empty();
-                refMap.put(key, storeInfoContainer);
-            }
-        } else {
-            storeInfoContainer = Optional.empty();
-            refMap.put(key, storeInfoContainer);
         }
-        return storeInfoContainer;
+        return storeInfo;
     }
-
-    private boolean keyRequestedIsNormalKey(final String key, final StoreInfo storeInfo) {
-        return !key.endsWith("/") && storeInfo.isNormalKey();
-    }
-
-    private boolean keyRequestedIsMasterMeta(final String key, final StoreInfo storeInfo) {
-        return key.endsWith("/") && storeInfo.isMasterMetaData();
-    }
-
+    
     private boolean checkKeyIsDotFile(final String key) {
-        // TODO Change this
-        return Paths.get(key).toFile().getName().startsWith(".");
+        return Path.of(key).getLastElement().startsWith(".");
     }
 
-    private StoreInfo load(final String key, final String ref) throws RefNotFoundException, IOException {
-        final SourceInfo sourceInfo = source.getSourceInfo(key, ref);
-        if (sourceInfo != null) {
-            return readStoreInfo(sourceInfo);
+    private RefHolder getRefHolder(final String finalRef) {
+        RefHolder refHolder = cache.get(finalRef);
+        if (refHolder == null) {
+            refHolder = cache.computeIfAbsent(finalRef, (r) -> new RefHolder(r, new ConcurrentHashMap<>(), source));            
         }
-        return null;
+        return refHolder;
     }
 
     @Override
@@ -245,8 +147,8 @@ public class GitStorage implements Storage {
     }
 
     @Override
-    public Supplier<Either<String, FailedToLock>> put(final String key, String ref, final byte[] data, final String oldVersion,
-            final String message, final String userInfo, final String userEmail) {
+    public Either<String, FailedToLock> put(final String key, String ref, final byte[] data, final String oldVersion, final String message,
+            final String userInfo, final String userEmail) {
         Objects.requireNonNull(key, "key cannot be null");
         Objects.requireNonNull(data, "data cannot be null");
         Objects.requireNonNull(oldVersion, "oldVersion cannot be null");
@@ -256,52 +158,28 @@ public class GitStorage implements Storage {
             throw new IllegalArgumentException("message cannot be empty");
         }
         final String finalRef = checkRef(ref);
-        final RefHolder refMap = cache.get(finalRef);
-        if (refMap == null) {
+        final RefHolder refHolder = cache.get(finalRef);
+        if (refHolder == null) {
             throw new WrappingAPIException(new RefNotFoundException(finalRef));
         }
-        return () -> {
-            try {
-                return Either.left(refMap.lockWrite(() -> {
-                    final Optional<StoreInfo> storeInfo = refMap.getKey(key);
-                    if (storageIsForbidden(storeInfo)) {
-                        throw new WrappingAPIException(new UnsupportedOperationException(key));
-                    }
-                    final String newVersion = source.modify(key, finalRef, data, oldVersion, message, userInfo, userEmail);
-                    refreshKey(data, key, oldVersion, newVersion, refMap.refCache, storeInfo.get().getStorageData().getContentType());
-                    return newVersion;
-                }, key));
-            } catch (FailedToLock e) {
-                return Either.right(e);
-            }
-        };
-    }
 
-    private void refreshKey(final byte[] data, final String key, final String oldversion, final String newVersion,
-            final Map<String, Optional<StoreInfo>> refMap, final String contentType) {
-        final Optional<StoreInfo> si = refMap.get(key);
-        final StoreInfo storeInfo = si.get();
-        if (storeInfo.getVersion().equals(oldversion)) {
-            refMap.put(key, Optional.of(new StoreInfo(data, storeInfo.getStorageData(), newVersion, storeInfo.getMetaDataVersion())));
-        }
-    }
-
-    private void refreshMetaData(final StorageData metaData, final String key, final String metaDataVersion, final String newVersion,
-            final Map<String, Optional<StoreInfo>> refMap, String contentType) {
-        final Optional<StoreInfo> si = refMap.get(key);
-        final StoreInfo storeInfo = si.get();
-        if (storeInfo.getMetaDataVersion().equals(metaDataVersion)) {
-            if (storeInfo.isMasterMetaData()) {
-                refMap.clear(); // TODO Don't clear all keys. Check which ones that could be left alone
-                refMap.put(key, Optional.of(new StoreInfo(metaData, newVersion)));
-            } else {
-                refMap.put(key, Optional.of(new StoreInfo(storeInfo.getData(), metaData, storeInfo.getVersion(), newVersion)));
-            }
+        try {
+            return Either.left(refHolder.lockWrite(() -> {
+                final Optional<StoreInfo> storeInfo = refHolder.getKey(key);
+                if (storageIsForbidden(storeInfo)) {
+                    throw new WrappingAPIException(new UnsupportedOperationException(key));
+                }
+                final String newVersion = source.modify(key, finalRef, data, oldVersion, message, userInfo, userEmail);
+                refHolder.refreshKey(data, key, oldVersion, newVersion, storeInfo.get().getStorageData().getContentType());
+                return newVersion;
+            }, key));
+        } catch (FailedToLock e) {
+            return Either.right(e);
         }
     }
 
     @Override
-    public Supplier<StoreInfo> add(final String key, String branch, final byte[] data, final StorageData metaData, final String message,
+    public StoreInfo add(final String key, String branch, final byte[] data, final StorageData metaData, final String message,
             final String userInfo, final String userMail) {
         Objects.requireNonNull(key, "key cannot be null");
         Objects.requireNonNull(data, "data cannot be null");
@@ -317,7 +195,7 @@ public class GitStorage implements Storage {
         isRefATag(finalRef);
 
         final RefHolder refStore = checkIfKeyAlreadyExists(key, finalRef);
-        return () -> refStore.write(() -> {
+        return refStore.write(() -> {
             SourceInfo sourceInfo = null;
             try {
                 try {
@@ -330,7 +208,7 @@ public class GitStorage implements Storage {
                 }
                 final Pair<String, String> version = source.addKey(key, finalRef, data, metaData, message, userInfo, userMail);
                 final StoreInfo storeInfo = new StoreInfo(data, metaData, version.getLeft(), version.getRight());
-                refStore.refCache.put(key, Optional.of(storeInfo));
+                refStore.putKey(key, Optional.of(storeInfo));
                 return storeInfo;
             } finally {
                 if (sourceInfo == null) {
@@ -338,11 +216,10 @@ public class GitStorage implements Storage {
                 }
             }
         });
-
     }
 
     private RefHolder checkIfKeyAlreadyExists(final String key, final String finalRef) {
-        final RefHolder refStore = getMap(finalRef);
+        final RefHolder refStore = getRefHolder(finalRef);
         final Optional<StoreInfo> storeInfo = refStore.getKey(key);
         if (storeInfo != null && storeInfo.isPresent()) {
             throw new WrappingAPIException(new KeyAlreadyExist(key, finalRef));
@@ -353,42 +230,15 @@ public class GitStorage implements Storage {
     private void removeCacheRef(final String finalRef, final RefHolder newRefHolder) {
         synchronized (cache) {
             final RefHolder refHolder = cache.get(finalRef);
-            if (refHolder == newRefHolder && refHolder.refCache.isEmpty()) {
+            if (refHolder == newRefHolder && refHolder.isEmpty()) {
                 cache.remove(finalRef);
             }
         }
     }
 
-    private StoreInfo readStoreInfo(final SourceInfo source) {
-        try {
-            final StorageData metaData = readMetaData(source);
-            try (final InputStream sourceStream = source.getSourceInputStream()) {
-                if (!metaData.isHidden()) {
-                    if (sourceStream != null) { // Implicitly an master .metadata SourceInfo instance...
-                        return new StoreInfo(HANDLER.readStorageData(sourceStream), metaData, source.getSourceVersion(),
-                                source.getMetaDataVersion());
-                    } else {
-                        return new StoreInfo(metaData, source.getMetaDataVersion());
-                    }
-                }
-            }
-            return null;
-        } catch (final IOException e) {
-            throw new UncheckedIOException(e);
-        }
-    }
-
-    private StorageData readMetaData(final SourceInfo source) {
-        try (final InputStream metaDataStream = source.getMetadataInputStream()) {
-            return HANDLER.readStorage(metaDataStream);
-        } catch (final IOException e) {
-            throw new UncheckedIOException(e);
-        }
-    }
-
     @Override
-    public Supplier<Either<String, FailedToLock>> putMetaData(final String key, String ref, final StorageData metaData,
-            final String metaDataVersion, final String message, final String userInfo, final String userMail) {
+    public Either<String, FailedToLock> putMetaData(final String key, String ref, final StorageData metaData, final String metaDataVersion,
+            final String message, final String userInfo, final String userMail) {
         Objects.requireNonNull(key, "key cannot be null");
         Objects.requireNonNull(userInfo, "userInfo cannot be null");
         Objects.requireNonNull(metaData, "metaData cannot be null");
@@ -399,39 +249,25 @@ public class GitStorage implements Storage {
         final String finalRef = checkRef(ref);
         isRefATag(finalRef);
 
-        final RefHolder refMap = cache.get(finalRef);
-        if (refMap == null) {
+        final RefHolder refHolder = cache.get(finalRef);
+        if (refHolder == null) {
             throw new WrappingAPIException(new RefNotFoundException(finalRef));
         }
-        return () -> {
-            try {
-                return Either.left(refMap.lockWrite(() -> {
-                    checkIfPlainKeyExist(key, finalRef, refMap.refCache);
-                    final Optional<StoreInfo> storeInfo = refMap.getKey(key);
-                    if (storageIsForbidden(storeInfo)) {
-                        throw new WrappingAPIException(new UnsupportedOperationException(key));
-                    }
-                    final String newVersion = source.modify(metaData, metaDataVersion, message, userInfo, userMail, key, finalRef);
-                    refreshMetaData(metaData, key, metaDataVersion, newVersion, refMap.refCache, metaData.getContentType());
-                    return newVersion;
 
-                }, key));
-            } catch (final FailedToLock e) {
-                return Either.right(e);
-            }
-        };
-    }
+        try {
+            return Either.left(refHolder.lockWrite(() -> {
+                refHolder.checkIfPlainKeyExist(key);
+                final Optional<StoreInfo> storeInfo = refHolder.getKey(key);
+                if (storageIsForbidden(storeInfo)) {
+                    throw new WrappingAPIException(new UnsupportedOperationException(key));
+                }
+                final String newVersion = source.modify(metaData, metaDataVersion, message, userInfo, userMail, key, finalRef);
+                refHolder.refreshMetaData(metaData, key, metaDataVersion, newVersion, metaData.getContentType());
+                return newVersion;
 
-    /*
-     * This has to be checked when a user modifies a .metadata file for a directory
-     */
-    private void checkIfPlainKeyExist(final String key, final String finalRef, final Map<String, Optional<StoreInfo>> refMap) {
-        if (key.endsWith("/")) {
-            final String plainKey = key.substring(0, key.length() - 1);
-            Optional<StoreInfo> optional = refMap.get(plainKey);
-            if (optional != null) {
-                throw new WrappingAPIException(new KeyAlreadyExist(key, finalRef));
-            }
+            }, key));
+        } catch (final FailedToLock e) {
+            return Either.right(e);
         }
     }
 
@@ -461,10 +297,10 @@ public class GitStorage implements Storage {
                 } catch (final UncheckedIOException ioe) {
                     consumeError(ioe);
                 }
-                refHolder.refCache.put(key, Optional.empty());
+                refHolder.putKey(key, Optional.empty());
             });
             synchronized (cache) {
-                if (refHolder.refCache.isEmpty()) {
+                if (refHolder.isEmpty()) {
                     cache.remove(finalRef);
                 }
             }
